--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,67 +2,71 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleDevelopmentRegion</key>
-	<string>$(DEVELOPMENT_LANGUAGE)</string>
-	<key>CFBundleDisplayName</key>
-	<string>First Flutter App</string>
-	<key>CFBundleExecutable</key>
-	<string>$(EXECUTABLE_NAME)</string>
-	<key>CFBundleIdentifier</key>
-	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
-	<key>CFBundleInfoDictionaryVersion</key>
-	<string>6.0</string>
-	<key>CFBundleName</key>
-	<string>first_flutter_app</string>
-	<key>CFBundlePackageType</key>
-	<string>APPL</string>
-	<key>CFBundleShortVersionString</key>
-	<string>$(FLUTTER_BUILD_NAME)</string>
-	<key>CFBundleSignature</key>
-	<string>????</string>
-	<key>CFBundleVersion</key>
-	<string>$(FLUTTER_BUILD_NUMBER)</string>
-	<key>LSRequiresIPhoneOS</key>
-	<true/>
+  <key>CFBundleDevelopmentRegion</key>
+  <string>$(DEVELOPMENT_LANGUAGE)</string>
+  <key>CFBundleDisplayName</key>
+  <string>First Flutter App</string>
+  <key>CFBundleExecutable</key>
+  <string>$(EXECUTABLE_NAME)</string>
+  <key>CFBundleIdentifier</key>
+  <string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+  <key>CFBundleInfoDictionaryVersion</key>
+  <string>6.0</string>
+  <key>CFBundleName</key>
+  <string>first_flutter_app</string>
+  <key>CFBundlePackageType</key>
+  <string>APPL</string>
+  <key>CFBundleShortVersionString</key>
+  <string>$(FLUTTER_BUILD_NAME)</string>
+  <key>CFBundleSignature</key>
+  <string>????</string>
+  <key>CFBundleVersion</key>
+  <string>$(FLUTTER_BUILD_NUMBER)</string>
+  <key>LSRequiresIPhoneOS</key>
+  <true/>
 
-	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
-	<key>UIMainStoryboardFile</key>
-	<string>Main</string>
+  <!-- Launch screens / storyboard -->
+  <key>UILaunchStoryboardName</key>
+  <string>LaunchScreen</string>
+  <key>UIMainStoryboardFile</key>
+  <string>Main</string>
 
-	<key>UISupportedInterfaceOrientations</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
-	</array>
-	<key>UISupportedInterfaceOrientations~ipad</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationPortraitUpsideDown</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
-	</array>
+  <!-- Supported orientations -->
+  <key>UISupportedInterfaceOrientations</key>
+  <array>
+    <string>UIInterfaceOrientationPortrait</string>
+    <string>UIInterfaceOrientationLandscapeLeft</string>
+    <string>UIInterfaceOrientationLandscapeRight</string>
+  </array>
+  <key>UISupportedInterfaceOrientations~ipad</key>
+  <array>
+    <string>UIInterfaceOrientationPortrait</string>
+    <string>UIInterfaceOrientationPortraitUpsideDown</string>
+    <string>UIInterfaceOrientationLandscapeLeft</string>
+    <string>UIInterfaceOrientationLandscapeRight</string>
+  </array>
 
-	<key>CADisableMinimumFrameDurationOnPhone</key>
-	<true/>
-	<key>UIApplicationSupportsIndirectInputEvents</key>
-	<true/>
+  <!-- Flutter performance toggles -->
+  <key>CADisableMinimumFrameDurationOnPhone</key>
+  <true/>
+  <key>UIApplicationSupportsIndirectInputEvents</key>
+  <true/>
 
-	<!-- Location (When In Use) -->
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Nyari uses your location to show nearby places on the map.</string>
+  <!-- Permissions (required for your plugins) -->
+  <!-- Location (When In Use) -->
+  <key>NSLocationWhenInUseUsageDescription</key>
+  <string>Nyari uses your location to show nearby places on the map.</string>
 
-	<!-- Camera / Photos (image_picker) -->
-	<key>NSCameraUsageDescription</key>
-	<string>We use the camera to let you take photos.</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>We need photo library access to pick images.</string>
-	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>We save images to your photo library on request.</string>
+  <!-- (Optional) Always + When In Use. Harmless if not requested in code. -->
+  <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+  <string>Allow location access so we can keep your nearby results up to date.</string>
 
-	<!-- If you ever request Always location, keep this key. Otherwise it's harmless but optional. -->
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>Allow location access so we can keep your nearby results up to date.</string>
+  <!-- Camera / Photos (image_picker) -->
+  <key>NSCameraUsageDescription</key>
+  <string>We use the camera to let you take photos.</string>
+  <key>NSPhotoLibraryUsageDescription</key>
+  <string>We need photo library access to pick images.</string>
+  <key>NSPhotoLibraryAddUsageDescription</key>
+  <string>We save images to your photo library on request.</string>
 </dict>
 </plist>
