--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,8 @@ name: first_flutter_app
 description: Nyari mobile app
 publish_to: "none"
 
-version: 1.0.0+10  # bump build number on each upload
+# bump this each TestFlight upload
+version: 1.0.0+12
 
 environment:
   sdk: ">=3.4.0 <4.0.0"
@@ -11,33 +12,33 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # State / UI (add your libs here if you have them)
-  cupertino_icons: ^1.0.8
+  # --- REQUIRED (these were missing in your build log) ---
+  provider: ^6.1.2
+  google_fonts: ^6.2.1
+  google_maps_flutter: ^2.9.0
+  timeago: ^3.6.1
+  url_launcher: ^6.3.0
+  image_picker: ^1.1.2
 
-  # --- Firebase / FlutterFire (Xcode 16 compatible) ---
+  # --- Firebase / FlutterFire (matching what the build pulled) ---
   firebase_core: ^4.1.1
   firebase_auth: ^6.1.0
   cloud_firestore: ^6.0.2
   firebase_storage: ^13.0.2
 
-  # --- Location / Geocoding ---
-  geolocator: ^14.0.2
-  geocoding: ^4.0.0
-
-  # --- ML Kit (if you use it) ---
+  # --- Optional utils you appear to use ---
+  package_info_plus: ^8.3.1
+  cupertino_icons: ^1.0.8
   google_mlkit_commons: ^0.11.0
   google_mlkit_language_id: ^0.13.0
   google_mlkit_translation: ^0.13.0
+  geolocator: ^14.0.2
+  geocoding: ^4.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^6.0.0  # keep at least a sane version
+  flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
-
-  # If you have assets, list them here
-  # assets:
-  #   - assets/images/
-  #   - assets/icons/
