--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -23,9 +23,11 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 
+	<!-- Launch screen storyboard only (no main storyboard for Flutter) -->
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 
+	<!-- Orientations -->
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
@@ -54,7 +56,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string>Nyari lets you take photos for business pages or reviews.</string>
 
-	<!-- External links (e.g., Instagram) -->
+	<!-- External links (e.g., Instagram deep links) -->
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>instagram</string>
