--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -1,6 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<plist version="1.0">
 <dict>
   <!-- Basic bundle metadata -->
   <key>CFBundleDevelopmentRegion</key>
@@ -24,9 +21,11 @@
   <key>LSRequiresIPhoneOS</key>
   <true/>
 
-  <!-- Launch screen (Flutter has no main storyboard) -->
+  <!-- Launch + main storyboards -->
   <key>UILaunchStoryboardName</key>
   <string>LaunchScreen</string>
+  <key>UIMainStoryboardFile</key>
+  <string>Main</string>
 
   <!-- Supported orientations -->
   <key>UISupportedInterfaceOrientations</key>
@@ -43,29 +42,23 @@
     <string>UIInterfaceOrientationLandscapeRight</string>
   </array>
 
-  <!-- Privacy strings (critical) -->
+  <!-- Privacy usage strings (do NOT duplicate) -->
   <key>NSLocationWhenInUseUsageDescription</key>
-  <string>Nyari uses your location to show nearby places and your position on the map.</string>
-  <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-  <string>Nyari uses your location to show nearby places and your position on the map.</string>
-
+  <string>Allow Nyari to use your location to show nearby places.</string>
+  <!-- Avoid Always/Background unless you actually use background location -->
   <key>NSPhotoLibraryUsageDescription</key>
-  <string>Nyari needs photo access so you can add pictures to business pages and reviews.</string>
+  <string>Allow Nyari to access your photos to attach to reviews.</string>
   <key>NSPhotoLibraryAddUsageDescription</key>
-  <string>Nyari may save photos you create when adding reviews.</string>
+  <string>Allow Nyari to save photos when needed.</string>
   <key>NSCameraUsageDescription</key>
-  <string>Nyari uses the camera so you can take photos for reviews.</string>
+  <string>Allow Nyari to use the camera to take photos for reviews.</string>
+  <key>NSMicrophoneUsageDescription</key>
+  <string>Allow Nyari to use the microphone for video reviews.</string>
 
-  <!-- Optional: only if you prefer storing the Maps key here
-  <key>GMSApiKey</key>
-  <string>YOUR_IOS_MAPS_API_KEY</string>
-  -->
-
-  <!-- External deep links (no http/https here) -->
+  <!-- URL schemes you might query -->
   <key>LSApplicationQueriesSchemes</key>
   <array>
     <string>instagram</string>
     <string>comgooglemaps</string>
   </array>
 </dict>
-</plist>
