--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,54 +2,73 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
-	<key>CFBundleExecutable</key>
-	<string>$(EXECUTABLE_NAME)</string>
-	<key>CFBundleIdentifier</key>
-	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
-	<key>CFBundleInfoDictionaryVersion</key>
-	<string>6.0</string>
-	<key>CFBundleName</key>
-	<string>$(PRODUCT_NAME)</string>
-	<key>CFBundlePackageType</key>
-	<string>APPL</string>
-	<key>CFBundleShortVersionString</key>
-	<string>$(MARKETING_VERSION)</string>
-	<key>CFBundleVersion</key>
-	<string>$(CURRENT_PROJECT_VERSION)</string>
-	<key>LSRequiresIPhoneOS</key>
-	<true/>
-	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
-	<key>UIMainStoryboardFile</key>
-	<string>Main</string>
-	<key>UIRequiredDeviceCapabilities</key>
-	<array>
-		<string>armv7</string>
-	</array>
-	<key>UISupportedInterfaceOrientations</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
-	</array>
-	<key>UISupportedInterfaceOrientations~ipad</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationPortraitUpsideDown</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
-	</array>
+  <!-- Basic bundle metadata -->
+  <key>CFBundleDevelopmentRegion</key>
+  <string>en</string>
+  <key>CFBundleDisplayName</key>
+  <string>Nyari</string>
+  <key>CFBundleExecutable</key>
+  <string>$(EXECUTABLE_NAME)</string>
+  <key>CFBundleIdentifier</key>
+  <string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+  <key>CFBundleInfoDictionaryVersion</key>
+  <string>6.0</string>
+  <key>CFBundleName</key>
+  <string>Nyari</string>
+  <key>CFBundlePackageType</key>
+  <string>APPL</string>
+  <key>CFBundleShortVersionString</key>
+  <string>$(MARKETING_VERSION)</string>
+  <key>CFBundleVersion</key>
+  <string>$(CURRENT_PROJECT_VERSION)</string>
+  <key>LSRequiresIPhoneOS</key>
+  <true/>
 
-	<!-- ✅ Added Required Privacy Keys -->
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Nyari uses your location to show nearby places and distance on the map.</string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>Nyari uses your location to keep nearby results accurate.</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Nyari needs photo access to attach pictures to your reviews.</string>
-	<key>NSCameraUsageDescription</key>
-	<string>Nyari uses the camera to take photos for your reviews.</string>
+  <!-- Launch + main storyboards -->
+  <key>UILaunchStoryboardName</key>
+  <string>LaunchScreen</string>
+  <key>UIMainStoryboardFile</key>
+  <string>Main</string>
+
+  <!-- Supported orientations -->
+  <key>UISupportedInterfaceOrientations</key>
+  <array>
+    <string>UIInterfaceOrientationPortrait</string>
+    <string>UIInterfaceOrientationLandscapeLeft</string>
+    <string>UIInterfaceOrientationLandscapeRight</string>
+  </array>
+  <key>UISupportedInterfaceOrientations~ipad</key>
+  <array>
+    <string>UIInterfaceOrientationPortrait</string>
+    <string>UIInterfaceOrientationPortraitUpsideDown</string>
+    <string>UIInterfaceOrientationLandscapeLeft</string>
+    <string>UIInterfaceOrientationLandscapeRight</string>
+  </array>
+
+  <!-- ✅ Privacy usage strings -->
+  <key>NSLocationWhenInUseUsageDescription</key>
+  <string>Allow Nyari to use your location to show nearby places.</string>
+
+  <!-- Added: satisfies Apple scanner when any SDK references background/always capability -->
+  <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+  <string>Nyari uses your location to keep nearby results accurate.</string>
+
+  <key>NSPhotoLibraryUsageDescription</key>
+  <string>Allow Nyari to access your photos to attach to reviews.</string>
+  <key>NSPhotoLibraryAddUsageDescription</key>
+  <string>Allow Nyari to save photos when needed.</string>
+  <key>NSCameraUsageDescription</key>
+  <string>Allow Nyari to use the camera to take photos for reviews.</string>
+
+  <!-- Keep this ONLY if you actually capture video/audio in-app -->
+  <key>NSMicrophoneUsageDescription</key>
+  <string>Allow Nyari to use the microphone for video reviews.</string>
+
+  <!-- URL schemes you might query -->
+  <key>LSApplicationQueriesSchemes</key>
+  <array>
+    <string>instagram</string>
+    <string>comgooglemaps</string>
+  </array>
 </dict>
 </plist>
