--- a/ios/Podfile
+++ b/ios/Podfile
@@ -10,7 +10,7 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 flutter_ios_podfile_setup
 
 target 'Runner' do
-  use_frameworks! :linkage => :static
+  # No use_frameworks! unless a pod docs say you must
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
 
