--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,8 +1,8 @@
 platform :ios, '15.5'
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
-# ✅ Generate module maps for static libs (fixes Firebase Swift pods with static linking)
-use_modular_headers!
+# ⛔️ REMOVE this if you added it earlier:
+# use_modular_headers!
 
 flutter_root = ENV['FLUTTER_ROOT']
 if flutter_root.nil? || flutter_root.empty?
@@ -13,7 +13,9 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 flutter_ios_podfile_setup
 
 target 'Runner' do
-  # No use_frameworks! line
+  # ✅ Use static frameworks to avoid gRPC modulemap issues
+  use_frameworks! :linkage => :static
+
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
 
