--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,33 +2,21 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-  <!-- Basic bundle metadata -->
-  <key>CFBundleDevelopmentRegion</key>
-  <string>en</string>
-  <key>CFBundleDisplayName</key>
-  <string>Nyari</string>
-  <key>CFBundleExecutable</key>
-  <string>$(EXECUTABLE_NAME)</string>
-  <key>CFBundleIdentifier</key>
-  <string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
-  <key>CFBundleInfoDictionaryVersion</key>
-  <string>6.0</string>
-  <key>CFBundleName</key>
-  <string>Nyari</string>
-  <key>CFBundlePackageType</key>
-  <string>APPL</string>
-  <key>CFBundleShortVersionString</key>
-  <string>$(MARKETING_VERSION)</string>
-  <key>CFBundleVersion</key>
-  <string>$(CURRENT_PROJECT_VERSION)</string>
-  <key>LSRequiresIPhoneOS</key>
-  <true/>
+  <key>CFBundleDevelopmentRegion</key><string>en</string>
+  <key>CFBundleDisplayName</key><string>Nyari</string>
+  <key>CFBundleExecutable</key><string>$(EXECUTABLE_NAME)</string>
+  <key>CFBundleIdentifier</key><string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+  <key>CFBundleInfoDictionaryVersion</key><string>6.0</string>
+  <key>CFBundleName</key><string>Nyari</string>
+  <key>CFBundlePackageType</key><string>APPL</string>
+  <key>CFBundleShortVersionString</key><string>$(MARKETING_VERSION)</string>
+  <key>CFBundleVersion</key><string>$(CURRENT_PROJECT_VERSION)</string>
+  <key>LSRequiresIPhoneOS</key><true/>
 
   <!-- Launch storyboard (Flutter does NOT use a main storyboard) -->
-  <key>UILaunchStoryboardName</key>
-  <string>LaunchScreen</string>
+  <key>UILaunchStoryboardName</key><string>LaunchScreen</string>
 
-  <!-- Supported orientations -->
+  <!-- Orientations -->
   <key>UISupportedInterfaceOrientations</key>
   <array>
     <string>UIInterfaceOrientationPortrait</string>
@@ -43,21 +31,17 @@
     <string>UIInterfaceOrientationLandscapeRight</string>
   </array>
 
-  <!-- Privacy (TCC) usage strings -->
+  <!-- Privacy usage strings -->
   <key>NSLocationWhenInUseUsageDescription</key>
   <string>Nyari shows places near you and needs your location while you use the app.</string>
-  <!-- Keep this only if there's any chance you'll request "Always" later -->
   <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
   <string>Nyari uses your location to keep nearby results accurate.</string>
-
   <key>NSCameraUsageDescription</key>
   <string>Nyari lets you take photos to attach to reviews.</string>
   <key>NSPhotoLibraryUsageDescription</key>
   <string>Nyari needs access to your photos so you can attach them to reviews.</string>
   <key>NSPhotoLibraryAddUsageDescription</key>
   <string>Nyari may save photos you create to your library.</string>
-
-  <!-- Remove if you don't record audio/video in-app -->
   <key>NSMicrophoneUsageDescription</key>
   <string>Nyari uses the microphone when recording videos for reviews.</string>
 
