--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,8 +2,8 @@
 description: Nyari mobile app
 publish_to: "none"
 
-# bump this each TestFlight upload
-version: 1.0.0+64
+# bump this for each TestFlight upload
+version: 1.0.0+67
 
 environment:
   sdk: ">=3.4.0 <4.0.0"
@@ -12,21 +12,21 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # --- REQUIRED (these were missing in your build log) ---
+  # Required UI / util deps
   provider: ^6.1.2
   google_fonts: ^6.2.1
-  google_maps_flutter: ^2.9.0
+  google_maps_flutter: ^2.13.1
   timeago: ^3.6.1
-  url_launcher: ^6.3.0
-  image_picker: ^1.1.2
+  url_launcher: ^6.3.2
+  image_picker: ^1.2.0
 
-  # --- Firebase / FlutterFire (matching what the build pulled) ---
+  # Firebase (as already used by your project)
   firebase_core: ^4.1.1
   firebase_auth: ^6.1.0
   cloud_firestore: ^6.0.2
   firebase_storage: ^13.0.2
 
-  # --- Optional utils you appear to use ---
+  # Optional utils you had
   package_info_plus: ^8.3.1
   cupertino_icons: ^1.0.8
   google_mlkit_commons: ^0.11.0
@@ -38,6 +38,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  # Dart 3.5.x compatible
   flutter_lints: ^5.0.0
 
 flutter:
