--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,8 @@
-﻿name: first_flutter_app
-description: Nyari mobile app
-publish_to: "none"
+﻿name: nyari
+description: A lifestyle & local discovery app built with Flutter + Firebase
+publish_to: 'none' # not publishing to pub.dev
 
-# bump this for each TestFlight upload
-version: 1.0.0+67
+version: 1.0.0+68
 
 environment:
   sdk: ">=3.4.0 <4.0.0"
@@ -12,34 +11,29 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # Required UI / util deps
+  # Core Firebase
+  firebase_core: ^2.31.1
+  cloud_firestore: ^4.17.2
+  firebase_auth: ^4.19.5
+  firebase_storage: ^11.7.7
+
+  # Maps + Location
+  google_maps_flutter: ^2.12.3   # ✅ compatible with Dart 3.6
+  geolocator: ^11.1.0
+  geocoding: ^3.0.0
+
+  # UI / State
   provider: ^6.1.2
-  google_fonts: ^6.2.1
-  google_maps_flutter: ^2.13.1
-  timeago: ^3.6.1
-  url_launcher: ^6.3.2
-  image_picker: ^1.2.0
+  intl: ^0.19.0
 
-  # Firebase (as already used by your project)
-  firebase_core: ^4.1.1
-  firebase_auth: ^6.1.0
-  cloud_firestore: ^6.0.2
-  firebase_storage: ^13.0.2
-
-  # Optional utils you had
-  package_info_plus: ^8.3.1
+  # Icons & UI polish
+  font_awesome_flutter: ^10.7.0
   cupertino_icons: ^1.0.8
-  google_mlkit_commons: ^0.11.0
-  google_mlkit_language_id: ^0.13.0
-  google_mlkit_translation: ^0.13.0
-  geolocator: ^14.0.2
-  geocoding: ^4.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  # Dart 3.5.x compatible
-  flutter_lints: ^5.0.0
+  flutter_lints: ^5.0.0   # ✅ works with Dart 3.6
 
 flutter:
   uses-material-design: true
